@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.5
 Date: ????
-  Changes:
+  Bugfixes:
+    - Use stdlib/event/player.pdata(id) to access pdata. Fixes #19
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.4
 Date: 2022-10-31
